--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/nodemon/bin/nodemon.js",
-    "test": "eslint ./app && mocha --timeout 10000",
+    "test": "eslint ./app && nyc mocha --timeout 10000",
     "lint": "eslint ./app"
   },
   "repository": {
@@ -31,6 +31,7 @@
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-plugin-import": "^2.7.0",
     "mocha": "^3.4.2",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "nyc": "^11.0.3"
   }
 }
