--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ node_js:
   - "6.10"
 
 before_install:
-    - export DISPLAY=:99.0
-    - sh -e /etc/init.d/xvfb start
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
 
 before_script:
-    - npm install
+  - npm install
 
-after_script:
-- cat coverage/*/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+after_success:
+  - npm run coverage
