chore: Add lock-file support for greenkeeper.io

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,15 @@ node_js:
 before_install:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+  - npm install -g npm@5
+  - npm install -g greenkeeper-lockfile@1
 
 before_script:
   - npm install
+  - greenkeeper-lockfile-update
+
+after_script:
+  - greenkeeper-lockfile-upload
 
 after_success:
   - npm run coverage
