--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bluebird": "^3.5.0",
     "cheerio": "latest",
     "express": "latest",
+    "http-status-codes": "^1.2.0",
     "request": "latest",
     "request-promise": "^4.2.1"
   },
