--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "nyc mocha --timeout 1000 && eslint ./app",
     "test-debug": "mocha --inspect --timeout 1000",
     "lint": "eslint ./app index.js ./test",
+    "lint:fix": "eslint --fix ./app index.js ./test",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "api-spec-generate": "bootprint openapi swagger.yml ./docs/api-spec/"
   },
@@ -36,10 +37,13 @@
     "chai": "^4.1.0",
     "chai-http": "^4.0.0",
     "coveralls": "^3.0.0",
-    "eslint": "^4.3.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.0.0",
     "eslint-config-airbnb-base": "^12.0.0",
     "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-mocha": "^5.0.0",
+    "eslint-plugin-react": "^7.7.0",
     "mocha": "^5.0.0",
     "nodemon": "^1.11.0",
     "nyc": "^11.0.3",
