--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/nodemon/bin/nodemon.js",
-    "test": "nyc mocha --timeout 1000 && eslint ./app",
-    "test-debug": "mocha --inspect --timeout 1000",
+    "test": "nyc mocha && eslint ./app",
+    "test:debug": "mocha --inspect",
     "lint": "eslint ./app index.js ./test",
     "lint:fix": "eslint --fix ./app index.js ./test",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
