chore(package): Add puppeteer

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cheerio": "latest",
     "express": "latest",
     "http-status-codes": "^1.2.0",
+    "puppeteer": "^1.4.0",
     "request": "latest",
     "request-promise": "^4.2.1",
     "validator": "^9.0.0"
